add ant build in demo-vertx